fix checkbox spacing

--- a/assets/css/components.scss
+++ b/assets/css/components.scss
@@ -17,8 +17,7 @@
     -o-transform: scale(1.5);
     transform: scale(1.5);
     padding: 10px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 1em auto;
   }
 
   .title {
